# sign-chain

./: .gitignore  LICENSE  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: build-desktop.yml  build-verify-app.yml  deploy-docs.yml
apps/api/: .env.example  package.json  tsconfig.app.json  webpack.config.js
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: main.ts
apps/desktop/: index.html  package.json  vite.config.mts
apps/desktop/src/: styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: anchor.rs  lib.rs  payload.rs  state.rs
apps/desktop/src-tauri/src/commands/: auth.rs  documents.rs  library.rs  mod.rs  pdf.rs
apps/desktop/src-tauri/src/pdf/: chain.rs  embed.rs  hash.rs  mod.rs  normalise.rs
apps/docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
apps/docs/docs/: intro.md
apps/verify/: app.json  metro.config.js  package.json  tsconfig.app.json
apps/web/: package.json  tsconfig.app.json  vite.config.mts
apps/web/src/: styles.css
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: Forwarder.sol  SignChain.sol
contracts/scripts/: deploy.ts
contracts/test/: SignChain.test.ts
docs/: auth-module-architecture.md  backend-spec.md  desktop-app-spec.md
libs/shared/crypto/: package.json
libs/shared/types/: package.json
scripts/: dev.sh
(+84 files in other folders)
