[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
lopdf = "0.34"
sha2 = "0.10"
hex = "0.4"
qrcode = "0.14"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
rand = "0.8"
base64ct = { version = "1", features = ["alloc"] }
aes-gcm = "0.10"
keyring = "3"
tauri-plugin-deep-link = "2"
url = "2"
